use field descriptions with table names, fix bugs